--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1,7 +1,8 @@
 @import "partials/partials";
 .modal-backdrop.show {
     background: rgba(0, 0, 0, 0.40);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(4px);
+    opacity: 1;
 }
 
 .custom-modal {
@@ -1118,6 +1119,7 @@
     .claim-reward-modal-body{
         padding: 0 60px 50px;
         .modal-title{
+            margin-bottom: 30px;
             h4{
                 color: $primary-dark;
                 display: flex;
@@ -1134,6 +1136,10 @@
                     background-color: #F3F4FA;
                     border-radius: 50%;
                     margin-right: 15px;
+                    padding: 5px;
+                    img{
+                        width: 27px;
+                    }
                 }
             }
         }
@@ -1177,6 +1183,9 @@
                 color: $primary-dark;
                 font-size: 15px;
                 font-weight: 600;
+                &.txt-green{
+                    color: $green !important;
+                }
             }
         }
         .btn-otr{
