--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -185,5 +185,124 @@
 .theme-dark .success-modal .modal-body .modal-title h2, .theme-dark .success-modal .modal-body .stake-detail .stake-amt .stake-rupees {
   color: #fff;
 }
+.theme-dark .staking-dashboard-outer .welcome-stake-outer, .theme-dark .staking-dashboard-outer .total-value-outer {
+  background-color: #000;
+  border: 1px solid #484848;
+}
+.theme-dark .staking-dashboard-outer .welcome-stake-outer .detail-sec-stake .props-badge .props-name {
+  background: #1D355C;
+}
+.theme-dark .staking-dashboard-outer .welcome-stake-outer .detail-sec-stake .welcome-txt h3,
+.theme-dark .staking-dashboard-outer .total-value-outer .stake-tot-locked h3 .txt-sec,
+.theme-dark .staking-dashboard-outer .total-value-outer .tot-detl-outer .total-inner .label-txt,
+.theme-dark .staking-dashboard-outer .total-value-outer .tot-detl-outer .total-inner .label-num,
+.theme-dark .card-section-outer .top-block .heading-txt .desc-content p.txt-content,
+.theme-dark .card-section-outer .top-block .timer-section label,
+.theme-dark .card-section-outer .top-block .timer-section ul li .label-count,
+.theme-dark .card-section-outer .top-block .list-order-outer .list-order .label-content,
+.theme-dark .staking-dashboard-outer .total-value-outer .stake-tot-locked .text-percent-count,
+.theme-dark .stake-modal .modal-body .crate-stake-modal-body .modal-title h2,
+.theme-dark .stake-modal .modal-body .pool-cap-txt .pool-label,
+.theme-dark .stake-modal .modal-body .pool-cap-txt .pool-cont,
+.theme-dark .stake-modal .modal-body .progress-bar-section .progress-count,
+.theme-dark .stake-modal .modal-body .btn-default,
+.theme-dark .stake-modal .modal-body .rwd-inner .detail-outer span,
+.theme-dark .stake-modal .modal-body .rwd-inner .detail-outer .cnt,
+.theme-dark .stake-modal .modal-body .rwd-inner.rwd-col-inner .detail-outer .props-col {
+  color: #fff;
+}
+.theme-dark .staking-dashboard-outer .welcome-stake-outer .detail-sec-stake .welcome-txt p {
+  color: #9E9E9E;
+}
+.theme-dark .staking-dashboard-outer .total-value-outer .stake-tot-locked {
+  border-bottom: 1px solid #484848;
+}
+.theme-dark .card-section-outer .top-block .timer-section ul li {
+  background: #2B2C2E;
+}
+.theme-dark .card-section-outer .top-block .timer-section ul li .num-txt {
+  background: #151618;
+  color: #A3A3A3;
+}
+.theme-dark .card-section-outer .top-block .btn-default {
+  background: transparent;
+  color: #fff;
+  border: 1px solid #B4BFCD;
+}
+.theme-dark .card-section-outer .bottom-block {
+  border-top: 1px solid #353535;
+}
+.theme-dark .card-section-outer .bottom-block .btn-outr .btn-unstake {
+  background: transparent;
+  color: #ffffff;
+}
+.theme-dark button.login-btn.header-btn-web {
+  border: 1px solid #4E4E4E;
+}
+.theme-dark .staking-dashboard-outer .total-value-outer .stake-tot-locked h3 .img-sec img {
+  filter: grayscale(1) brightness(3);
+}
+.theme-dark .card-section-outer .top-block .icon-head-top .img-icon.d-none {
+  display: block !important;
+}
+.theme-dark .card-section-outer .top-block .icon-head-top .img-icon-white {
+  display: none !important;
+}
+.theme-dark .table-no-data p {
+  color: #ffffff;
+}
+.theme-dark .stake-modal .modal-content {
+  border: 1px solid #272727;
+  background: #000;
+}
+.theme-dark .stake-modal .modal-body .btn-default {
+  background: transparent;
+}
+.theme-dark .stake-modal .modal-body .btn-default {
+  border: 1px solid #B2B2B2;
+}
+.theme-dark .stake-modal .modal-body .lock-period {
+  color: #B2B2B2;
+}
+.theme-dark .stake-modal .modal-body .policy-stake {
+  border: 1px solid #2B2B2B;
+  background: #0F0F0F;
+}
+.theme-dark .stake-modal .modal-body .policy-stake .head-policy, .theme-dark .stake-modal .modal-body .policy-stake .policy-text {
+  color: #B2B2B2;
+}
+.theme-dark .stake-modal .modal-body .input-group .form-control {
+  background: transparent;
+  border: 1px solid #3F3F3F;
+}
+.theme-dark .stake-modal .modal-body .input-group .badges .num-badge {
+  border: 1px solid #B2B2B2;
+  color: #fff;
+}
+.theme-dark .stake-modal .modal-body .input-group .badges .max-active {
+  border: 1px solid #2966FF;
+}
+.theme-dark .stake-modal .modal-body .crate-stake-modal-body .modal-title img {
+  background: transparent;
+  filter: grayscale(1) brightness(3);
+}
+.theme-dark .stake-modal .modal-body .policy-stake .head-policy img {
+  filter: grayscale(1) brightness(3);
+}
+.theme-dark .stake-modal .modal-body .rwd-inner .detail-outer img {
+  filter: grayscale(1) brightness(1);
+}
+.theme-dark .stake-modal .modal-body .input-group .form-control {
+  color: #B2B2B2;
+}
+.theme-dark .stake-modal .modal-body .withdraw-btn {
+  background: #EE8728;
+}
+.theme-dark .table-no-data .img-block .no-data-img.d-none {
+  display: block !important;
+}
+.theme-dark .table-no-data .img-block .no-data-img {
+  display: none !important;
+}
 
 /*# sourceMappingURL=dark-theme.css.map */
