--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -40,6 +40,9 @@ $bg-color-check:#D3E3F8;
 $light-blue:#2966FF;
 $light-dark:#484D65;
 $orange:#EE8728;
+$dark-border:#484848;
+$bg-dark-blue:#1D355C;
+$light-grey-txt:#9E9E9E;
 
 // Breakpoints
 //––––––––––––––––––––––––––––––––––––––––––––––––––
