--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -127,11 +127,23 @@
         {
             border-bottom: 1px solid $border-grey;
             padding-bottom: 14px;
+            display: flex;
+            justify-content: space-between;
+            align-items:center;
             @media(max-width:991px)
             {
                 padding-bottom: 8px;
             }
-            
+            .text-percent-count
+            {
+                font-weight: 500;
+                font-size: 20px;
+                color: #2E4276;
+                @media(max-width:1679px)
+                {
+                    font-size:18px;
+                }
+            }
             h3
             {
                 font-size:20px;
@@ -292,7 +304,7 @@
         padding-left: 0;
         padding-right: 0;
         
-        @media(max-width:1199px)
+        @media(max-width:1350px)
         {
             flex-wrap: wrap;
         }
@@ -300,6 +312,17 @@
     }
     .top-block
     {
+        .icon-head-top
+        {
+            justify-content: end;
+            .img-icon
+            {
+                @media(max-width:1679px)
+                {
+                    height: 22px;
+                }
+            }
+        }
         .heading-txt
         {
             display:flex;
@@ -673,7 +696,7 @@
                     align-items: center;
                     @media(max-width:1679px)
                     {
-                        margin-bottom: 20px;
+                        margin-bottom: 15px;
                         font-size: 18px;
                     }
                     @media(max-width:767px)
@@ -707,7 +730,9 @@
             }
             @media(max-width:1679px)
             {
-                font-size: 14px;
+                font-size: 13px;
+                margin-top:8px;
+                margin-bottom:2px;
             }
             @media(max-width:767px)
             {
@@ -788,7 +813,7 @@
             @media(max-width:1679px)
             {
                 margin-top: 15px;
-                margin-bottom: 18px;
+                margin-bottom: 9px;
             }
             .detail-outer {
                 margin-bottom: 20px;
@@ -799,7 +824,7 @@
                 }
                 @media(max-width:1679px)
                 {
-                    margin-bottom: 16px;
+                    margin-bottom: 12px;
                 }
                 img
                 {
@@ -833,6 +858,10 @@
                     width: 50%;
                     flex-wrap: wrap;
                     margin-bottom: 30px;
+                    @media(max-width:1679px)
+                    {
+                        margin-bottom: 20px;
+                    }
                     .props-col{
                         padding-top: 6px;
                         width: 100%;
@@ -937,7 +966,7 @@
             @media(max-width:1679px)
             {
                 font-size: 13px;
-                height: 45px;
+                height: 40px;
             }
             @media(max-width:450px)
             {
@@ -953,7 +982,8 @@
             padding: 20px 22px;
             @media(max-width:1679px)
             {
-                margin-top: 20px;
+                margin-top:15px;
+                padding: 10px 15px;
             }
             @media(max-width:575px)
             {
@@ -987,6 +1017,10 @@
                 @media(max-width:1679px)
                 {
                     font-size: 11px;
+                }
+                p
+                {
+                    margin-bottom:8px;
                 }
             }
         }
