--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -9,6 +9,8 @@ $text-primary-light: #8393BA;
 $primary-blue: #2966FF;
 $table-border: #F2F2FC;
 
+$table-th: #1A1A1B;
+$table-bodrer: #242424;
 // Font stack
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 $font-primary: 'Poppins', sans-serif;
