--- a/css/login.css
+++ b/css/login.css
@@ -269,8 +269,7 @@
         font-size: 14px; } }
 
 button.close-modal {
-  background: transparent;
-}
+  background: transparent; }
 
 .fgt-modal .alert-msg-cover .alert-msg {
   top: 104% !important; }
