--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -317,5 +317,30 @@
 .theme-dark .table-no-data .img-block .no-data-img {
   display: none !important;
 }
+.theme-dark .custom-modal.crate-stake-modal .inp-block-modal .custom-inp {
+  border: 1px solid #484848;
+  background: transparent;
+  color: #ffffff;
+}
+.theme-dark .custom-modal.crate-stake-modal .inp-block-modal .form-label {
+  color: #9EB3CD;
+}
+.theme-dark .crate-stake-modal .img-box-cover .img-name-block .img-name,
+.theme-dark .custom-modal.crate-stake-modal .modal-title h2 {
+  color: #ffffff;
+}
+.theme-dark .custom-modal.crate-stake-modal .btn-cover-modal .btn-border {
+  color: #ffffff !important;
+  border-color: #9EB3CD !important;
+  background: transparent;
+}
+.theme-dark .custom-modal.crate-stake-modal .modal-info-cover .modal-info-block {
+  background-color: #251E0D;
+  color: #FBCB5E;
+}
+.theme-dark .crate-stake-modal .img-box-cover .img-select-btn {
+  background-color: #242734;
+  color: #ffffff;
+}
 
 /*# sourceMappingURL=dark-theme.css.map */
