--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -151,6 +151,7 @@ $dark-block-2: #2B2C2E;
     .portfolio-sec .lg-graph .graph-table-block .graph-table tr td{
         border: none;
         border-bottom: solid 1px #191919;
+        background-color:$dark-black;
     }
     .portfolio-sec .lg-graph{
         border: solid 1px $dark-border-2;
